--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('/public/bg.jpg');
+  background-image: url('/bg.jpg');
 }
 nav {
   background-color: rgba(240, 248, 255, 0.952);
@@ -22,4 +22,21 @@ nav {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+
+.App {
+  text-align: center;
+}
+.li-item {
+  background: #cfcfcfc7;
+}
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
